syntax = "proto3";

option java_multiple_files = true;
package vn.com.fpt.jobservice.u_service.grpc;

service UService {
  rpc CreateBatchRenewalContract (BatchRenewalRequest) returns (BatchRenewalResponse);
}

message BatchRenewalRequest {
  int64 ticketId = 1;
  int64 phaseId = 2;
  int64 subProcessId = 3;
}

message BatchRenewalResponse {
  string message = 1;
}
